# tap-aircall

./: .gitignore  README.md  meltano.yml  pyproject.toml  setup.py  tap-aircall.sh  tox.ini
.github/workflows/: ci_workflow.yml
samples/: create_sample.py
tap_aircall/: _tap.py  auth.py  client.py  schemas.py  streams.py  tap.py
tap_aircall/tests/: __init__.py  test_core.py
